Fix color contrasts

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,10 +8,8 @@
 a {
   color: #14997e;
   text-decoration: none;
-  opacity: 0.8;
 
   &:hover {
-    opacity: 1;
     text-decoration: underline;
   }
 }
